test/src/test/k3s/swagger-ui/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: swagger-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swagger-ui
    spec:
      containers:
        - name: swagger-ui
          image: ${image.swagger-ui}
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: swagger-ui-config
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0
