test/src/test/k3s/swagger-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ui
spec:
  rules:
    - host: swagger-ui.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  name: http
