test/src/test/k3s/swagger-ui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: swagger-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: swagger-ui
